CSS/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  /* border: dotted; */
}

header {
  background-color: black;
  color: rgba(255, 255, 255, 0.96);
  padding: 1.5rem;
  text-align: center;
}

main {
  min-height: 90vh;
  width: 90%;
  margin: auto;
}

#index {
  display: flex;

  justify-content: center;
  /* text-align: center;  */
  align-items: center;
}

#question {
  display: flex;
  height: 200px;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#question h2 {
  width: 70%;
  margin-top: 2rem;
}

#contSolution {
  width: 70%;
  height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
}

#contSolution #solution {
  width: 50%;
  text-align: center;
}

#title {
  /* display: flex; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#card {
  height: 500px;
  width: 70%;
  display: flex;
  flex-direction: column;
  margin: 20px auto;
  align-items: center;
}

ul {
  display: flex;
  list-style: none;
  width: 100%;
  height: 100%;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  justify-content: space-between;
}

li {
  display: flex;
  width: 100%;
  height: 100px;
  text-align: center;
}

.btns {
  flex-grow: 1;
  border-radius: 5%;
}

footer {
  background-color: black;
  color: rgba(255, 255, 255, 0.96);
}

@media screen and (min-width: 800px) {
  ul {
    height: 200px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 10px;
  }

  #card {
    height: 70%;
    justify-content: center;
  }

  #contSolution {
    height: 400px;
  }
}

